src/tests/fixtures/input_type_one_of/simpleOneOfDeprecatedTag.invalid.ts.expected
-----------------
INPUT
----------------- 
/**
 * @gqlInput
 * @oneOf
 */
export type Greeting = { firstName: string } | { lastName: string };

-----------------
OUTPUT
-----------------
-- Error Report --
src/tests/fixtures/input_type_one_of/simpleOneOfDeprecatedTag.invalid.ts:3:4 - error: The `@oneOf` tag has been deprecated. Grats will now automatically add the `@oneOf` directive if you define your input type as a TypeScript union. You can remove the `@oneOf` tag.

3  * @oneOf
     ~~~~~~
4  */
  ~


-- Code Action: "Remove @oneOf tag" (remove-oneOf-tag) --
- Original
+ Fixed

@@ -2,4 +2,3 @@
   * @gqlInput
-  * @oneOf
-  */
+  * */
  export type Greeting = { firstName: string } | { lastName: string };